--- a/ISR_Time_ScatterPlot.ipynb
+++ b/ISR_Time_ScatterPlot.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ISR_Time_ScatterPlot.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/anthopper/meteorology/blob/main/ISR_Time_ScatterPlot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -48,7 +59,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "260dfe25-95c5-44a5-850e-1036cea9b329"
+        "outputId": "35269041-0f3d-4089-9dec-7020971cbb29"
       },
       "execution_count": 1,
       "outputs": [
@@ -57,16 +68,16 @@
           "name": "stdout",
           "text": [
             "env: PYTHONPATH=\n",
-            "--2022-02-24 14:05:37--  https://repo.anaconda.com/miniconda/Miniconda3-4.5.4-Linux-x86_64.sh\n",
-            "Resolving repo.anaconda.com (repo.anaconda.com)... 104.16.130.3, 104.16.131.3, 2606:4700::6810:8203, ...\n",
-            "Connecting to repo.anaconda.com (repo.anaconda.com)|104.16.130.3|:443... connected.\n",
+            "--2022-03-02 15:06:09--  https://repo.anaconda.com/miniconda/Miniconda3-4.5.4-Linux-x86_64.sh\n",
+            "Resolving repo.anaconda.com (repo.anaconda.com)... 104.16.131.3, 104.16.130.3, 2606:4700::6810:8303, ...\n",
+            "Connecting to repo.anaconda.com (repo.anaconda.com)|104.16.131.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 58468498 (56M) [application/x-sh]\n",
             "Saving to: ‘Miniconda3-4.5.4-Linux-x86_64.sh’\n",
             "\n",
-            "Miniconda3-4.5.4-Li 100%[===================>]  55.76M   130MB/s    in 0.4s    \n",
+            "Miniconda3-4.5.4-Li 100%[===================>]  55.76M   138MB/s    in 0.4s    \n",
             "\n",
-            "2022-02-24 14:05:38 (130 MB/s) - ‘Miniconda3-4.5.4-Linux-x86_64.sh’ saved [58468498/58468498]\n",
+            "2022-03-02 15:06:09 (138 MB/s) - ‘Miniconda3-4.5.4-Linux-x86_64.sh’ saved [58468498/58468498]\n",
             "\n",
             "PREFIX=/usr/local\n",
             "installing: python-3.6.5-hc3d631a_2 ...\n",
@@ -119,70 +130,70 @@
             "\n",
             "    package                    |            build\n",
             "    ---------------------------|-----------------\n",
-            "    zstd-1.4.9                 |       haebb681_0         809 KB\n",
-            "    readline-8.1.2             |       h7f8727e_1         423 KB\n",
-            "    ca-certificates-2021.10.26 |       h06a4308_2         121 KB\n",
-            "    libgfortran-ng-7.3.0       |       hdf63c60_0         1.3 MB\n",
-            "    olefile-0.46               |     pyhd3eb1b0_0          33 KB\n",
-            "    fonttools-4.25.0           |     pyhd3eb1b0_0         674 KB\n",
-            "    c-ares-1.18.1              |       h7f8727e_0         119 KB\n",
-            "    giflib-5.2.1               |       h7b6447c_0          82 KB\n",
-            "    lz4-c-1.9.3                |       h295c915_1         216 KB\n",
-            "    xz-5.2.5                   |       h7b6447c_0         438 KB\n",
-            "    blas-1.0                   |              mkl           6 KB\n",
-            "    tk-8.6.11                  |       h1ccaba5_0         3.2 MB\n",
-            "    libwebp-base-1.2.2         |       h7f8727e_0         869 KB\n",
-            "    matplotlib-base-3.5.1      |   py37ha18d171_0         7.4 MB\n",
-            "    mkl_fft-1.3.1              |   py37hd3c417c_0         190 KB\n",
-            "    scipy-1.6.2                |   py37had2a1c9_1        19.9 MB\n",
-            "    libcurl-7.80.0             |       h0b77cf5_0         351 KB\n",
-            "    mkl-service-2.4.0          |   py37h7f8727e_0          59 KB\n",
-            "    kiwisolver-1.3.2           |   py37h295c915_0          86 KB\n",
-            "    libssh2-1.9.0              |       h1ba5d50_1         346 KB\n",
-            "    cycler-0.11.0              |     pyhd3eb1b0_0          12 KB\n",
-            "    libgcc-ng-9.1.0            |       hdf63c60_0         8.1 MB\n",
-            "    pyparsing-3.0.4            |     pyhd3eb1b0_0          78 KB\n",
-            "    zlib-1.2.11                |       h7f8727e_4         125 KB\n",
-            "    sqlite-3.37.2              |       hc218d9a_0         1.5 MB\n",
-            "    numpy-1.21.2               |   py37h20f2e39_0          22 KB\n",
-            "    _libgcc_mutex-0.1          |             main           3 KB\n",
-            "    numpy-base-1.21.2          |   py37h79a1101_0         6.0 MB\n",
-            "    libffi-3.3                 |       he6710b0_2          54 KB\n",
             "    cartopy-0.18.0             |   py37hc576cba_1         1.9 MB\n",
-            "    lcms2-2.12                 |       h3be6417_0         396 KB\n",
-            "    geos-3.8.0                 |       he6710b0_0         1.0 MB\n",
-            "    shapely-1.7.1              |   py37h1728cc4_0         436 KB\n",
-            "    munkres-1.1.4              |             py_0          13 KB\n",
-            "    libpng-1.6.37              |       hbc83047_0         364 KB\n",
-            "    python-dateutil-2.8.2      |     pyhd3eb1b0_0         241 KB\n",
-            "    pip-21.2.2                 |   py37h06a4308_0         2.0 MB\n",
-            "    mkl-2021.4.0               |     h06a4308_640       219.1 MB\n",
+            "    olefile-0.46               |     pyhd3eb1b0_0          33 KB\n",
             "    libwebp-1.2.2              |       h55f646e_0          88 KB\n",
-            "    intel-openmp-2021.4.0      |    h06a4308_3561         8.8 MB\n",
-            "    krb5-1.19.2                |       hac12032_0         1.4 MB\n",
-            "    jpeg-9d                    |       h7f8727e_0         265 KB\n",
-            "    ncurses-6.3                |       h7f8727e_2         1.0 MB\n",
+            "    python-3.7.11              |       h12debd9_0        52.9 MB\n",
+            "    c-ares-1.18.1              |       h7f8727e_0         119 KB\n",
+            "    geos-3.8.0                 |       he6710b0_0         1.0 MB\n",
+            "    libstdcxx-ng-9.1.0         |       hdf63c60_0         4.0 MB\n",
+            "    libtiff-4.2.0              |       h85742a9_0         640 KB\n",
+            "    libffi-3.3                 |       he6710b0_2          54 KB\n",
+            "    munkres-1.1.4              |             py_0          13 KB\n",
+            "    lz4-c-1.9.3                |       h295c915_1         216 KB\n",
+            "    six-1.16.0                 |     pyhd3eb1b0_1          19 KB\n",
+            "    setuptools-58.0.4          |   py37h06a4308_0         979 KB\n",
+            "    _libgcc_mutex-0.1          |             main           3 KB\n",
             "    libev-4.33                 |       h7f8727e_1         106 KB\n",
             "    pillow-8.4.0               |   py37h5aabda8_0         702 KB\n",
+            "    giflib-5.2.1               |       h7b6447c_0          82 KB\n",
             "    packaging-21.3             |     pyhd3eb1b0_0          35 KB\n",
-            "    openssl-1.1.1m             |       h7f8727e_0         3.8 MB\n",
-            "    libtiff-4.2.0              |       h85742a9_0         640 KB\n",
-            "    proj-7.0.1                 |       h59a7b90_1         3.7 MB\n",
-            "    libstdcxx-ng-9.1.0         |       hdf63c60_0         4.0 MB\n",
-            "    libedit-3.1.20210910       |       h7f8727e_0         191 KB\n",
-            "    certifi-2021.10.8          |   py37h06a4308_2         156 KB\n",
-            "    setuptools-58.0.4          |   py37h06a4308_0         979 KB\n",
-            "    mkl_random-1.2.2           |   py37h51133e4_0         332 KB\n",
+            "    lcms2-2.12                 |       h3be6417_0         396 KB\n",
             "    wheel-0.37.1               |     pyhd3eb1b0_0          31 KB\n",
-            "    python-3.7.11              |       h12debd9_0        52.9 MB\n",
-            "    ld_impl_linux-64-2.35.1    |       h7274673_9         637 KB\n",
-            "    six-1.16.0                 |     pyhd3eb1b0_1          19 KB\n",
+            "    pip-21.2.2                 |   py37h06a4308_0         2.0 MB\n",
+            "    scipy-1.6.2                |   py37had2a1c9_1        19.9 MB\n",
+            "    zlib-1.2.11                |       h7f8727e_4         125 KB\n",
+            "    libgfortran-ng-7.3.0       |       hdf63c60_0         1.3 MB\n",
+            "    blas-1.0                   |              mkl           6 KB\n",
+            "    mkl-service-2.4.0          |   py37h7f8727e_0          59 KB\n",
+            "    ca-certificates-2022.2.1   |       h06a4308_0         130 KB\n",
+            "    matplotlib-base-3.5.1      |   py37ha18d171_0         7.4 MB\n",
             "    pyshp-2.1.3                |     pyhd3eb1b0_0          36 KB\n",
-            "    libnghttp2-1.46.0          |       hce63b2e_0         795 KB\n",
-            "    brotli-1.0.9               |       he6710b0_2         402 KB\n",
+            "    zstd-1.4.9                 |       haebb681_0         809 KB\n",
             "    freetype-2.11.0            |       h70c0345_0         943 KB\n",
+            "    fonttools-4.25.0           |     pyhd3eb1b0_0         674 KB\n",
+            "    libcurl-7.80.0             |       h0b77cf5_0         351 KB\n",
+            "    openssl-1.1.1m             |       h7f8727e_0         3.8 MB\n",
+            "    python-dateutil-2.8.2      |     pyhd3eb1b0_0         241 KB\n",
+            "    proj-7.0.1                 |       h59a7b90_1         3.7 MB\n",
+            "    libgcc-ng-9.1.0            |       hdf63c60_0         8.1 MB\n",
+            "    xz-5.2.5                   |       h7b6447c_0         438 KB\n",
+            "    cycler-0.11.0              |     pyhd3eb1b0_0          12 KB\n",
+            "    libssh2-1.9.0              |       h1ba5d50_1         346 KB\n",
+            "    intel-openmp-2021.4.0      |    h06a4308_3561         8.8 MB\n",
+            "    tk-8.6.11                  |       h1ccaba5_0         3.2 MB\n",
+            "    libpng-1.6.37              |       hbc83047_0         364 KB\n",
+            "    brotli-1.0.9               |       he6710b0_2         402 KB\n",
+            "    certifi-2021.10.8          |   py37h06a4308_2         156 KB\n",
+            "    shapely-1.7.1              |   py37h1728cc4_0         436 KB\n",
+            "    sqlite-3.37.2              |       hc218d9a_0         1.5 MB\n",
+            "    readline-8.1.2             |       h7f8727e_1         423 KB\n",
+            "    krb5-1.19.2                |       hac12032_0         1.4 MB\n",
+            "    libwebp-base-1.2.2         |       h7f8727e_0         869 KB\n",
+            "    ncurses-6.3                |       h7f8727e_2         1.0 MB\n",
+            "    numpy-base-1.21.2          |   py37h79a1101_0         6.0 MB\n",
+            "    pyparsing-3.0.4            |     pyhd3eb1b0_0          78 KB\n",
+            "    kiwisolver-1.3.2           |   py37h295c915_0          86 KB\n",
+            "    mkl-2021.4.0               |     h06a4308_640       219.1 MB\n",
+            "    numpy-1.21.2               |   py37h20f2e39_0          22 KB\n",
+            "    mkl_fft-1.3.1              |   py37hd3c417c_0         190 KB\n",
+            "    ld_impl_linux-64-2.35.1    |       h7274673_9         637 KB\n",
+            "    libedit-3.1.20210910       |       h7f8727e_0         191 KB\n",
+            "    libnghttp2-1.46.0          |       hce63b2e_0         795 KB\n",
+            "    mkl_random-1.2.2           |   py37h51133e4_0         332 KB\n",
+            "    jpeg-9d                    |       h7f8727e_0         265 KB\n",
             "    ------------------------------------------------------------\n",
-            "                                           Total:       359.7 MB\n",
+            "                                           Total:       359.8 MB\n",
             "\n",
             "The following NEW packages will be INSTALLED:\n",
             "\n",
@@ -233,7 +244,7 @@
             "\n",
             "The following packages will be UPDATED:\n",
             "\n",
-            "    ca-certificates:  2018.03.07-0            --> 2021.10.26-h06a4308_2   \n",
+            "    ca-certificates:  2018.03.07-0            --> 2022.2.1-h06a4308_0     \n",
             "    certifi:          2018.4.16-py36_0        --> 2021.10.8-py37h06a4308_2\n",
             "    libedit:          3.1.20170329-h6b74fdf_2 --> 3.1.20210910-h7f8727e_0 \n",
             "    libffi:           3.2.1-hd88cf55_4        --> 3.3-he6710b0_2          \n",
@@ -258,9 +269,9 @@
             "Requirement already satisfied: cartopy in /usr/local/lib/python3.7/site-packages (0.18.0)\n",
             "Requirement already satisfied: setuptools>=0.7.2 in /usr/local/lib/python3.7/site-packages (from cartopy) (58.0.4)\n",
             "Requirement already satisfied: shapely>=1.5.6 in /usr/local/lib/python3.7/site-packages (from cartopy) (1.7.1)\n",
-            "Requirement already satisfied: pyshp>=1.1.4 in /usr/local/lib/python3.7/site-packages (from cartopy) (2.1.3)\n",
-            "Requirement already satisfied: six>=1.3.0 in /usr/local/lib/python3.7/site-packages (from cartopy) (1.16.0)\n",
             "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.7/site-packages (from cartopy) (1.21.2)\n",
+            "Requirement already satisfied: six>=1.3.0 in /usr/local/lib/python3.7/site-packages (from cartopy) (1.16.0)\n",
+            "Requirement already satisfied: pyshp>=1.1.4 in /usr/local/lib/python3.7/site-packages (from cartopy) (2.1.3)\n",
             "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
             "Mounted at /content/drive\n"
           ]
@@ -273,15 +284,15 @@
         "id": "mbh0Q1u7Lu1u",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 295
+          "height": 350
         },
-        "outputId": "01f2a032-6750-4563-bdeb-88a4460597d4"
+        "outputId": "f0b03406-d565-431d-8034-b4c89ee9907c"
       },
       "source": [
         "# This script creates a global contour map of the mean RSR values at each location\n",
         "\n",
         "# Open the dataset file\n",
-        "fileObj = sp.NetCDFFile('/content/drive/My Drive/Classroom/Research Project 2022/Data/CERES_EBAF-TOA_Ed4.1_Subset_200003-202111.nc', 'r')\n",
+        "fileObj = sp.NetCDFFile('/content/drive/My Drive/Meteorology/CERES_EBAF-TOA_Ed4.1_Subset_200003-202111.nc', 'r')\n",
         "\n",
         "# Make variables to store all the ISR and latitude values\n",
         "ISR = fileObj.variables['solar_mon'][:]\n",
@@ -334,10 +345,18 @@
         "plt.grid()\n",
         "\n",
         "# Save a PNG image of the map\n",
-        "plt.savefig('/content/drive/My Drive/Research Project/ISR_Time_ScatterPlot.png', bbox_inches='tight', dpi=200)"
+        "plt.savefig('/content/drive/My Drive/Meteorology/ISR_Time_ScatterPlot.png', bbox_inches='tight', dpi=200)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/scipy/io/netcdf.py:317: RuntimeWarning: Cannot close a netcdf_file opened with mmap=True, when netcdf_variables or arrays referring to its data still exist. All data arrays obtained from such files refer directly to data on disk, and must be copied before the file can be cleanly closed. (See netcdf_file docstring for more information on mmap.)\n",
+            "  ), category=RuntimeWarning)\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -351,6 +370,17 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "5aseu9BdLgaO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
