--- a/RSR_Map.ipynb
+++ b/RSR_Map.ipynb
@@ -44,15 +44,237 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "hhYiVZkaxbp1"
+        "id": "hhYiVZkaxbp1",
+        "outputId": "3745aa7b-4d92-42c8-ba5d-724704f5331a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "env: PYTHONPATH=\n",
+            "--2022-03-02 18:21:02--  https://repo.anaconda.com/miniconda/Miniconda3-4.5.4-Linux-x86_64.sh\n",
+            "Resolving repo.anaconda.com (repo.anaconda.com)... 104.16.131.3, 104.16.130.3, 2606:4700::6810:8203, ...\n",
+            "Connecting to repo.anaconda.com (repo.anaconda.com)|104.16.131.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 58468498 (56M) [application/x-sh]\n",
+            "Saving to: ‘Miniconda3-4.5.4-Linux-x86_64.sh’\n",
+            "\n",
+            "Miniconda3-4.5.4-Li 100%[===================>]  55.76M   142MB/s    in 0.4s    \n",
+            "\n",
+            "2022-03-02 18:21:03 (142 MB/s) - ‘Miniconda3-4.5.4-Linux-x86_64.sh’ saved [58468498/58468498]\n",
+            "\n",
+            "PREFIX=/usr/local\n",
+            "installing: python-3.6.5-hc3d631a_2 ...\n",
+            "Python 3.6.5 :: Anaconda, Inc.\n",
+            "installing: ca-certificates-2018.03.07-0 ...\n",
+            "installing: conda-env-2.6.0-h36134e3_1 ...\n",
+            "installing: libgcc-ng-7.2.0-hdf63c60_3 ...\n",
+            "installing: libstdcxx-ng-7.2.0-hdf63c60_3 ...\n",
+            "installing: libffi-3.2.1-hd88cf55_4 ...\n",
+            "installing: ncurses-6.1-hf484d3e_0 ...\n",
+            "installing: openssl-1.0.2o-h20670df_0 ...\n",
+            "installing: tk-8.6.7-hc745277_3 ...\n",
+            "installing: xz-5.2.4-h14c3975_4 ...\n",
+            "installing: yaml-0.1.7-had09818_2 ...\n",
+            "installing: zlib-1.2.11-ha838bed_2 ...\n",
+            "installing: libedit-3.1.20170329-h6b74fdf_2 ...\n",
+            "installing: readline-7.0-ha6073c6_4 ...\n",
+            "installing: sqlite-3.23.1-he433501_0 ...\n",
+            "installing: asn1crypto-0.24.0-py36_0 ...\n",
+            "installing: certifi-2018.4.16-py36_0 ...\n",
+            "installing: chardet-3.0.4-py36h0f667ec_1 ...\n",
+            "installing: idna-2.6-py36h82fb2a8_1 ...\n",
+            "installing: pycosat-0.6.3-py36h0a5515d_0 ...\n",
+            "installing: pycparser-2.18-py36hf9f622e_1 ...\n",
+            "installing: pysocks-1.6.8-py36_0 ...\n",
+            "installing: ruamel_yaml-0.15.37-py36h14c3975_2 ...\n",
+            "installing: six-1.11.0-py36h372c433_1 ...\n",
+            "installing: cffi-1.11.5-py36h9745a5d_0 ...\n",
+            "installing: setuptools-39.2.0-py36_0 ...\n",
+            "installing: cryptography-2.2.2-py36h14c3975_0 ...\n",
+            "installing: wheel-0.31.1-py36_0 ...\n",
+            "installing: pip-10.0.1-py36_0 ...\n",
+            "installing: pyopenssl-18.0.0-py36_0 ...\n",
+            "installing: urllib3-1.22-py36hbe7ace6_0 ...\n",
+            "installing: requests-2.18.4-py36he2e5f8d_1 ...\n",
+            "installing: conda-4.5.4-py36_0 ...\n",
+            "installation finished.\n",
+            "Solving environment: ...working... done\n",
+            "\n",
+            "## Package Plan ##\n",
+            "\n",
+            "  environment location: /usr/local\n",
+            "\n",
+            "  added / updated specs: \n",
+            "    - cartopy\n",
+            "    - python=3.7\n",
+            "\n",
+            "\n",
+            "The following packages will be downloaded:\n",
+            "\n",
+            "    package                    |            build\n",
+            "    ---------------------------|-----------------\n",
+            "    ncurses-6.3                |       h7f8727e_2         1.0 MB\n",
+            "    sqlite-3.37.2              |       hc218d9a_0         1.5 MB\n",
+            "    numpy-base-1.21.2          |   py37h79a1101_0         6.0 MB\n",
+            "    cycler-0.11.0              |     pyhd3eb1b0_0          12 KB\n",
+            "    zlib-1.2.11                |       h7f8727e_4         125 KB\n",
+            "    libpng-1.6.37              |       hbc83047_0         364 KB\n",
+            "    libwebp-base-1.2.2         |       h7f8727e_0         869 KB\n",
+            "    _libgcc_mutex-0.1          |             main           3 KB\n",
+            "    tk-8.6.11                  |       h1ccaba5_0         3.2 MB\n",
+            "    numpy-1.21.2               |   py37h20f2e39_0          22 KB\n",
+            "    libssh2-1.9.0              |       h1ba5d50_1         346 KB\n",
+            "    libgfortran-ng-7.3.0       |       hdf63c60_0         1.3 MB\n",
+            "    olefile-0.46               |     pyhd3eb1b0_0          33 KB\n",
+            "    libgcc-ng-9.1.0            |       hdf63c60_0         8.1 MB\n",
+            "    libcurl-7.80.0             |       h0b77cf5_0         351 KB\n",
+            "    matplotlib-base-3.5.1      |   py37ha18d171_0         7.4 MB\n",
+            "    python-3.7.11              |       h12debd9_0        52.9 MB\n",
+            "    libedit-3.1.20210910       |       h7f8727e_0         191 KB\n",
+            "    kiwisolver-1.3.2           |   py37h295c915_0          86 KB\n",
+            "    scipy-1.6.2                |   py37had2a1c9_1        19.9 MB\n",
+            "    libnghttp2-1.46.0          |       hce63b2e_0         795 KB\n",
+            "    freetype-2.11.0            |       h70c0345_0         943 KB\n",
+            "    libffi-3.3                 |       he6710b0_2          54 KB\n",
+            "    pip-21.2.2                 |   py37h06a4308_0         2.0 MB\n",
+            "    c-ares-1.18.1              |       h7f8727e_0         119 KB\n",
+            "    libwebp-1.2.2              |       h55f646e_0          88 KB\n",
+            "    munkres-1.1.4              |             py_0          13 KB\n",
+            "    brotli-1.0.9               |       he6710b0_2         402 KB\n",
+            "    packaging-21.3             |     pyhd3eb1b0_0          35 KB\n",
+            "    libtiff-4.2.0              |       h85742a9_0         640 KB\n",
+            "    cartopy-0.18.0             |   py37hc576cba_1         1.9 MB\n",
+            "    blas-1.0                   |              mkl           6 KB\n",
+            "    python-dateutil-2.8.2      |     pyhd3eb1b0_0         241 KB\n",
+            "    jpeg-9d                    |       h7f8727e_0         265 KB\n",
+            "    libev-4.33                 |       h7f8727e_1         106 KB\n",
+            "    mkl_fft-1.3.1              |   py37hd3c417c_0         190 KB\n",
+            "    giflib-5.2.1               |       h7b6447c_0          82 KB\n",
+            "    pyparsing-3.0.4            |     pyhd3eb1b0_0          78 KB\n",
+            "    shapely-1.7.1              |   py37h1728cc4_0         436 KB\n",
+            "    fonttools-4.25.0           |     pyhd3eb1b0_0         674 KB\n",
+            "    geos-3.8.0                 |       he6710b0_0         1.0 MB\n",
+            "    libstdcxx-ng-9.1.0         |       hdf63c60_0         4.0 MB\n",
+            "    zstd-1.4.9                 |       haebb681_0         809 KB\n",
+            "    ca-certificates-2022.2.1   |       h06a4308_0         130 KB\n",
+            "    proj-7.0.1                 |       h59a7b90_1         3.7 MB\n",
+            "    readline-8.1.2             |       h7f8727e_1         423 KB\n",
+            "    mkl-service-2.4.0          |   py37h7f8727e_0          59 KB\n",
+            "    pillow-8.4.0               |   py37h5aabda8_0         702 KB\n",
+            "    wheel-0.37.1               |     pyhd3eb1b0_0          31 KB\n",
+            "    setuptools-58.0.4          |   py37h06a4308_0         979 KB\n",
+            "    intel-openmp-2021.4.0      |    h06a4308_3561         8.8 MB\n",
+            "    six-1.16.0                 |     pyhd3eb1b0_1          19 KB\n",
+            "    lz4-c-1.9.3                |       h295c915_1         216 KB\n",
+            "    mkl_random-1.2.2           |   py37h51133e4_0         332 KB\n",
+            "    openssl-1.1.1m             |       h7f8727e_0         3.8 MB\n",
+            "    certifi-2021.10.8          |   py37h06a4308_2         156 KB\n",
+            "    lcms2-2.12                 |       h3be6417_0         396 KB\n",
+            "    mkl-2021.4.0               |     h06a4308_640       219.1 MB\n",
+            "    ld_impl_linux-64-2.35.1    |       h7274673_9         637 KB\n",
+            "    pyshp-2.1.3                |     pyhd3eb1b0_0          36 KB\n",
+            "    xz-5.2.5                   |       h7b6447c_0         438 KB\n",
+            "    krb5-1.19.2                |       hac12032_0         1.4 MB\n",
+            "    ------------------------------------------------------------\n",
+            "                                           Total:       359.8 MB\n",
+            "\n",
+            "The following NEW packages will be INSTALLED:\n",
+            "\n",
+            "    _libgcc_mutex:    0.1-main               \n",
+            "    blas:             1.0-mkl                \n",
+            "    brotli:           1.0.9-he6710b0_2       \n",
+            "    c-ares:           1.18.1-h7f8727e_0      \n",
+            "    cartopy:          0.18.0-py37hc576cba_1  \n",
+            "    cycler:           0.11.0-pyhd3eb1b0_0    \n",
+            "    fonttools:        4.25.0-pyhd3eb1b0_0    \n",
+            "    freetype:         2.11.0-h70c0345_0      \n",
+            "    geos:             3.8.0-he6710b0_0       \n",
+            "    giflib:           5.2.1-h7b6447c_0       \n",
+            "    intel-openmp:     2021.4.0-h06a4308_3561 \n",
+            "    jpeg:             9d-h7f8727e_0          \n",
+            "    kiwisolver:       1.3.2-py37h295c915_0   \n",
+            "    krb5:             1.19.2-hac12032_0      \n",
+            "    lcms2:            2.12-h3be6417_0        \n",
+            "    ld_impl_linux-64: 2.35.1-h7274673_9      \n",
+            "    libcurl:          7.80.0-h0b77cf5_0      \n",
+            "    libev:            4.33-h7f8727e_1        \n",
+            "    libgfortran-ng:   7.3.0-hdf63c60_0       \n",
+            "    libnghttp2:       1.46.0-hce63b2e_0      \n",
+            "    libpng:           1.6.37-hbc83047_0      \n",
+            "    libssh2:          1.9.0-h1ba5d50_1       \n",
+            "    libtiff:          4.2.0-h85742a9_0       \n",
+            "    libwebp:          1.2.2-h55f646e_0       \n",
+            "    libwebp-base:     1.2.2-h7f8727e_0       \n",
+            "    lz4-c:            1.9.3-h295c915_1       \n",
+            "    matplotlib-base:  3.5.1-py37ha18d171_0   \n",
+            "    mkl:              2021.4.0-h06a4308_640  \n",
+            "    mkl-service:      2.4.0-py37h7f8727e_0   \n",
+            "    mkl_fft:          1.3.1-py37hd3c417c_0   \n",
+            "    mkl_random:       1.2.2-py37h51133e4_0   \n",
+            "    munkres:          1.1.4-py_0             \n",
+            "    numpy:            1.21.2-py37h20f2e39_0  \n",
+            "    numpy-base:       1.21.2-py37h79a1101_0  \n",
+            "    olefile:          0.46-pyhd3eb1b0_0      \n",
+            "    packaging:        21.3-pyhd3eb1b0_0      \n",
+            "    pillow:           8.4.0-py37h5aabda8_0   \n",
+            "    proj:             7.0.1-h59a7b90_1       \n",
+            "    pyparsing:        3.0.4-pyhd3eb1b0_0     \n",
+            "    pyshp:            2.1.3-pyhd3eb1b0_0     \n",
+            "    python-dateutil:  2.8.2-pyhd3eb1b0_0     \n",
+            "    scipy:            1.6.2-py37had2a1c9_1   \n",
+            "    shapely:          1.7.1-py37h1728cc4_0   \n",
+            "    zstd:             1.4.9-haebb681_0       \n",
+            "\n",
+            "The following packages will be UPDATED:\n",
+            "\n",
+            "    ca-certificates:  2018.03.07-0            --> 2022.2.1-h06a4308_0     \n",
+            "    certifi:          2018.4.16-py36_0        --> 2021.10.8-py37h06a4308_2\n",
+            "    libedit:          3.1.20170329-h6b74fdf_2 --> 3.1.20210910-h7f8727e_0 \n",
+            "    libffi:           3.2.1-hd88cf55_4        --> 3.3-he6710b0_2          \n",
+            "    libgcc-ng:        7.2.0-hdf63c60_3        --> 9.1.0-hdf63c60_0        \n",
+            "    libstdcxx-ng:     7.2.0-hdf63c60_3        --> 9.1.0-hdf63c60_0        \n",
+            "    ncurses:          6.1-hf484d3e_0          --> 6.3-h7f8727e_2          \n",
+            "    openssl:          1.0.2o-h20670df_0       --> 1.1.1m-h7f8727e_0       \n",
+            "    pip:              10.0.1-py36_0           --> 21.2.2-py37h06a4308_0   \n",
+            "    python:           3.6.5-hc3d631a_2        --> 3.7.11-h12debd9_0       \n",
+            "    readline:         7.0-ha6073c6_4          --> 8.1.2-h7f8727e_1        \n",
+            "    setuptools:       39.2.0-py36_0           --> 58.0.4-py37h06a4308_0   \n",
+            "    six:              1.11.0-py36h372c433_1   --> 1.16.0-pyhd3eb1b0_1     \n",
+            "    sqlite:           3.23.1-he433501_0       --> 3.37.2-hc218d9a_0       \n",
+            "    tk:               8.6.7-hc745277_3        --> 8.6.11-h1ccaba5_0       \n",
+            "    wheel:            0.31.1-py36_0           --> 0.37.1-pyhd3eb1b0_0     \n",
+            "    xz:               5.2.4-h14c3975_4        --> 5.2.5-h7b6447c_0        \n",
+            "    zlib:             1.2.11-ha838bed_2       --> 1.2.11-h7f8727e_4       \n",
+            "\n",
+            "Preparing transaction: ...working... done\n",
+            "Verifying transaction: ...working... done\n",
+            "Executing transaction: ...working... done\n",
+            "Requirement already satisfied: cartopy in /usr/local/lib/python3.7/site-packages (0.18.0)\n",
+            "Requirement already satisfied: pyshp>=1.1.4 in /usr/local/lib/python3.7/site-packages (from cartopy) (2.1.3)\n",
+            "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.7/site-packages (from cartopy) (1.21.2)\n",
+            "Requirement already satisfied: six>=1.3.0 in /usr/local/lib/python3.7/site-packages (from cartopy) (1.16.0)\n",
+            "Requirement already satisfied: setuptools>=0.7.2 in /usr/local/lib/python3.7/site-packages (from cartopy) (58.0.4)\n",
+            "Requirement already satisfied: shapely>=1.5.6 in /usr/local/lib/python3.7/site-packages (from cartopy) (1.7.1)\n",
+            "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mbh0Q1u7Lu1u"
+        "id": "mbh0Q1u7Lu1u",
+        "outputId": "212b1807-c4d2-44e4-b925-3468cf3f72b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This script creates a global contour map of the mean RSR values at each location\n",
@@ -60,7 +282,7 @@
         "print('here 1')\n",
         "\n",
         "# Open the dataset file\n",
-        "fileObj = sp.NetCDFFile('/content/drive/Shared drives/Research Project Data/CERES_EBAF-TOA_Ed4.1_Subset_200003-202111.nc', 'r')\n",
+        "fileObj = sp.NetCDFFile('/content/drive/My Drive/Meteorology/CERES_EBAF-TOA_Ed4.1_Subset_200003-202111.nc', 'r')\n",
         "print('here 2')\n",
         "\n",
         "# Make variables to store all the RSR, latitude, and longitude values\n",
@@ -97,12 +319,38 @@
         "print('here 9')\n",
         "\n",
         "# Save a PNG image of the map\n",
-        "plt.savefig('/content/drive/My Drive/Research Project/RSR_Map.png', bbox_inches='tight', dpi=200)\n",
+        "plt.savefig('/content/drive/My Drive/Meteorology/RSR_Map.png', bbox_inches='tight', dpi=200)\n",
         "print('here 10')\n",
         "\n",
         "# projection options: https://scitools.org.uk/cartopy/docs/latest/crs/projections.html\n",
         "# cmap options: https://matplotlib.org/stable/tutorials/colors/colormaps.html"
       ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "here 1\n",
+            "here 2\n",
+            "here 3\n",
+            "here 4\n",
+            "here 5\n",
+            "here 6\n",
+            "here 7\n",
+            "here 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "0RKSsQoc4zHi"
+      },
       "execution_count": null,
       "outputs": []
     }
